<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/details">

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/back" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="205dp"
        android:layout_below="@+id/back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/sunny"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/city"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weatherCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cityName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/extended_data_about_weather_condition"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Share_day"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@id/weatherCondition"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button"
        android:text="@string/share_your_day"
        android:textColor="#2f837f"
        android:textSize="15sp" />

    <Button
        android:id="@+id/camera"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@id/weatherCondition"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="Take a picture"
        android:textColor="#2f837f"
        android:textSize="15sp" />


</RelativeLayout>